<resources>
    <string name="app_name">Well Run</string>
    <string name="garage_title">Гараж</string>
    <string name="profile_title">Профиль</string>
    <string name="garage_empty_description">Здесь будут данные вашего авто\nВы сможете просматривать ближайшие записи, историю обслуживания, рекомендации для автомобиля после диагностик и записывать авто на СТО.</string>
    <string name="book_service">Записаться на СТО</string>
    <string name="garage_empty_image">Иллюстрация пустого гаража</string>
    <string name="photos">Фотографии</string>
    <string name="services">Услуги</string>
    <string name="amenities">Удобства</string>
    <string name="no_services_available">Нет доступных услуг</string>
    <string name="no_amenities_available">Нет доступных удобств</string>
</resources>