<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- Ручка для перетаскивания -->
    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/secondary_color" />

    <!-- Адрес -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/street_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/building_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/progress_dot_active"
            android:layout_marginTop="6dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Eжедневно"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/working_hours_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorSecondary"/>
    </LinearLayout>

    <!-- Фотографии -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/photos"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/photos_recycler"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"/>

    <!-- Кнопка записи -->
    <Button
        android:id="@+id/book_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_service"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        app:backgroundTint="@null"
        android:textColor="@color/white"/>

    <!-- Услуги -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/repair_key_ic"
            android:padding="4dp"
            app:tint="@color/secondary_color" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/services"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/secondary_color"/>

    </LinearLayout>

    <TextView
        android:id="@+id/services_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@color/secondary_color"/>

    <!-- Удобства -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/gift_ic"
            android:padding="4dp"
            app:tint="@color/secondary_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amenities"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/secondary_color"/>

    </LinearLayout>

    <TextView
        android:id="@+id/amenities_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_color"
        android:layout_marginBottom="16dp"/>

</LinearLayout>